Cfn-yaml/AWS_infra.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Creates two-subnets in VPC (Public w/ NAT gateway and Private )
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: VPC Configuration Parameters
        Parameters:
          - VPCCIDR
          - PublicSubnetCIDR
          - SSHLocation
    ParameterLabels:
      VPCCIDR:
        default: Enter CIDR of New VPC
      PublicSubnetCIDR:
        default: Enter CIDR of the Public Subnet
      SSHLocation:
        default: Subnet Allowed to SSH on TCP to Public Subnet
Parameters:
  VPCCIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Description: CIDR block for entire VPC
    Type: String
    Default: 10.10.0.0/16
  PublicSubnetCIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Description: CIDR block for the Public Subnet
    Type: String
    Default: 10.10.10.0/24
  SSHLocation:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(/[0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/0-28
    Default: 0.0.0.0/0
    Description: Network Allowed to SSH to instances in public subnet
    Type: String
Mappings: {}
Conditions: {}
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock:
        Ref: VPCCIDR
      Tags:
        - Key: Name
          Value: TestingVPC
        - Key: CloudFormationStack
          Value:
            Ref: AWS::StackId
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: IGW
        - Key: CloudFormationStack
          Value:
            Ref: AWS::StackId
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: PublicSubnetCIDR
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Public
                - Ref: PublicSubnetCIDR
        - Key: CloudFormationStack
          Value:
            Ref: AWS::StackId
  PublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Public
                - Ref: PublicSubnetCIDR
        - Key: CloudFormationStack
          Value:
            Ref: AWS::StackId
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId:
        Ref: PublicSubnetRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  PublicSubnetRouteTableAssosiation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet
      RouteTableId:
        Ref: PublicSubnetRouteTable
  PublicInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH Via Port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp:
            Ref: SSHLocation
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - PublicSG
                - Ref: VPCCIDR
        - Key: CloudFormationStack
          Value:
            Ref: AWS::StackId
Outputs:
  VPCId:
    Description: VPCId of the Newly Created VPC
    Value:
      Ref: VPC
  PublicSubnetId:
    Description: "SubnetId of PublicSubnet "
    Value:
      Ref: PublicSubnet
  PublicSubnetRouteTable:
    Description: Public Route Table
    Value:
      Ref: PublicSubnetRouteTable
  PublicInstanceSG:
    Description: SG for instances in Public Subnet
    Value:
      Ref: PublicInstanceSG
